base functions are implemented

--- a/config_deploy.json
+++ b/config_deploy.json
@@ -4,5 +4,6 @@
   "dbport": "5432",
   "dbuser": "docker",
   "dbpassword": "docker",
-  "dbname" : "docker"
+  "dbname" : "docker",
+  "doc_path": "/home/app/doc"
 }
